Fix project details meta alignment

--- a/portfolio/styles/Projects.module.scss
+++ b/portfolio/styles/Projects.module.scss
@@ -733,7 +733,7 @@
 		font-family		: Lato;
 		font-size		: 1.5rem;
 		letter-spacing		: 0.5px;
-		text-align		: center;
+		text-align		: left;
 	}
 
 	/* Slideshow */
